Fix text clipping on buttons with long text

--- a/src/xenia/app/resources/themes/Xenia/stylesheets/XDropdownButton.css
+++ b/src/xenia/app/resources/themes/Xenia/stylesheets/XDropdownButton.css
@@ -2,6 +2,7 @@ QToolButton#XDropdownButton {
   background: $dark1;
   color: $primary;
   border: 2px solid $light3;
+  padding: 4px;
 }
 
 QToolButton#XDropdownButton:disabled {
