--- a/src/xenia/app/resources/themes/Xenia/stylesheets/XPushButton.css
+++ b/src/xenia/app/resources/themes/Xenia/stylesheets/XPushButton.css
@@ -2,6 +2,7 @@ QPushButton#XPushButton {
   background: $dark1;
   color: $primary;
   border: 2px solid $light3;
+  padding: 4px;
 }
 
 QPushButton#XPushButton:disabled {
